<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    android:background="@color/themeMainColor"
    android:padding="15sp"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:src="@drawable/twotone_movie_24"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/movies"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:textSize="50sp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:text="@string/register"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"
        android:textColor="@color/textTitle"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="10sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:textColorHint="@color/textHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:importantForAccessibility="yes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="10sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:textColorHint="@color/textHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:importantForAccessibility="yes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="10sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:textColorHint="@color/textHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:importantForAccessibility="yes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_marginTop="10sp"
        android:paddingLeft="16sp"
        android:paddingRight="16sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/textHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:importantForAccessibility="yes"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_register"
        android:text="@string/register"
        android:textColor="@color/buttonText"
        android:textSize="24sp"
        android:backgroundTint="@color/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingLeft="64sp"
        android:paddingRight="64sp"/>

    <TextView
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:textColor="@color/button"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp" />



</LinearLayout>
