...
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_valid_email">Enter a valid email</string>
    <string name="account_created">Account created successfully</string>
    <string name="user_exists">User already exists</string>
    <string name="movies">Movies</string>
    <string name="see_all">See all</string>
    <string name="top_movies">Top Movies</string>
    <string name="hello_user">Hello User</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="film_name">Film Name</string>
...
