<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/black"
    tools:context=".activities.SeatListActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/footerLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Back Button and Title -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="48dp">

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:srcCompat="@drawable/back_2"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_seats"
                    android:textStyle="bold"
                    android:textSize="19sp"
                    android:textColor="@color/textTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/backBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Date and Time RecyclerViews -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dateRecyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="105dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/TimeRecyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dateRecyclerview" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Screen and Seat Layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="406dp"
                    android:layout_height="322dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/cinema"
                    tools:ignore="ContentDescription" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/seatRecyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="400dp"
                    android:layout_marginTop="72dp"
                    app:layout_constraintBottom_toBottomOf="@id/imageView4"
                    app:layout_constraintEnd_toEndOf="@id/imageView4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@id/imageView4"
                    app:layout_constraintTop_toTopOf="@id/imageView4"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Legend -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="12dp">

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:background="@drawable/ic_seat_available" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/textColorFilm"
                    android:textSize="12sp"
                    android:text="@string/available" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_seat_selected" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/textColorFilm"
                    android:textSize="12sp"
                    android:text="@string/selected" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_seat_unavailable" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/textColorFilm"
                    android:textSize="12sp"
                    android:text="@string/unavailable" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Footer -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/priceTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textColor="@color/textTitle"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/button"
            android:text="@string/download_ticket"
            android:textColor="@color/buttonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/numberSelectedTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_seat_selected"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
